0024998: The incorrect _USE_MATH_DEFINES definition in Standard_math.hxx prevents the clean build for client applications

Add #ifndef clause to avoid redefinition compile error